# seqan

apps/mason2/: mason_genome.cpp  simulate_genome.cpp  simulate_illumina.cpp
apps/unique_kmers/: CMakeLists.txt  unique_kmers.cpp
apps/yara/: CMakeLists.txt  build_filter.cpp  unique_kmers.cpp
include/seqan/: kmer.h
include/seqan/index/: shape_gapped.h
include/seqan/kmer/: KmerOffset  filtervector.h  kmer_base.h  kmer_direct.h  kmer_ibf.h  kmer_nonoverlapping_direct.h  kmer_nonoverlapping_ibf.h  kmer_offset  kmer_shape.h  offset.h  selectbehaviour.h
include/seqan/kmer/benchmark/kmer/: kmer_benchmark.cpp
include/seqan/kmer/test/: CMakeLists.txt  benchmark.cpp  benchmark_paper.cpp  seqan_kmer.cpp
include/seqan/kmer/test/performance/: CMakeLists.txt  dascript  g_benchmark.cpp  manual_benchmark.cpp  mini_benchmark.cpp  paper_benchmark.cpp  script.sh  scriptall.sh
include/seqan/kmer/test/unit/: CMakeLists.txt  newsh  test.fasta  unit_benchmark.cpp  unit_da_gapped_benchmark.cpp  unit_da_no_overlaps_benchmark.cpp  unit_da_ungapped_benchmark.cpp  unit_ibf_gapped_benchmark.cpp  unit_ibf_no_overlaps_benchmark.cpp  unit_ibf_ungapped_benchmark.cpp  unit_offset_functionality_benchmark.cpp
